import assert from 'assert'
import AtpAgent from '@atproto/api'
import { TestNetwork } from '@atproto/dev-env'
import {
  isNotFoundPost,
  isThreadViewPost,
} from '../../src/lexicon/types/app/bsky/feed/defs'
import { SeedClient } from '../seeds/client'
import basicSeed from '../seeds/basic'
import { forSnapshot } from '../_util'

describe('views with interaction gating', () => {
  let network: TestNetwork
  let agent: AtpAgent
  let pdsAgent: AtpAgent
  let sc: SeedClient

  beforeAll(async () => {
    network = await TestNetwork.create({
      dbPostgresSchema: 'bsky_views_gating',
    })
    agent = network.bsky.getClient()
    pdsAgent = network.pds.getClient()
    sc = new SeedClient(pdsAgent)
    await basicSeed(sc)
    await network.processAll()
  })

  afterAll(async () => {
    await network.close()
  })

  it('applies gate for empty rules.', async () => {
    const post = await sc.post(sc.dids.carol, 'empty rules')
    await pdsAgent.api.app.bsky.feed.gate.create(
      { repo: sc.dids.carol, rkey: post.ref.uri.rkey },
      { post: post.ref.uriStr, createdAt: iso(), allow: [] },
      sc.getHeaders(sc.dids.carol),
    )
    await sc.reply(sc.dids.alice, post.ref, post.ref, 'empty rules reply')
    await network.processAll()
    const {
      data: { thread },
    } = await agent.api.app.bsky.feed.getPostThread(
      { uri: post.ref.uriStr },
      { headers: await network.serviceHeaders(sc.dids.alice) },
    )
    assert(isThreadViewPost(thread))
    expect(thread.post.gate).toMatchSnapshot()
    expect(thread.viewer).toEqual({ canReply: false })
    expect(thread.replies?.length).toEqual(0)
  })

  it('applies gate for mention rule.', async () => {
    const post = await sc.post(
      sc.dids.carol,
      'mention rules @carol.test @dan.test',
      [
        {
          index: { byteStart: 14, byteEnd: 25 },
          features: [
            { $type: 'app.bsky.richtext.facet#mention', did: sc.dids.carol },
          ],
        },
        {
          index: { byteStart: 26, byteEnd: 35 },
          features: [
            { $type: 'app.bsky.richtext.facet#mention', did: sc.dids.dan },
          ],
        },
      ],
    )
    await pdsAgent.api.app.bsky.feed.gate.create(
      { repo: sc.dids.carol, rkey: post.ref.uri.rkey },
      {
        post: post.ref.uriStr,
        createdAt: iso(),
        allow: [{ $type: 'app.bsky.feed.gate#mentionRule' }],
      },
      sc.getHeaders(sc.dids.carol),
    )
    await sc.reply(
      sc.dids.alice,
      post.ref,
      post.ref,
      'mention rule reply disallow',
    )
    const danReply = await sc.reply(
      sc.dids.dan,
      post.ref,
      post.ref,
      'mention rule reply allow',
    )
    await network.processAll()
    const {
      data: { thread: aliceThread },
    } = await agent.api.app.bsky.feed.getPostThread(
      { uri: post.ref.uriStr },
      { headers: await network.serviceHeaders(sc.dids.alice) },
    )
    assert(isThreadViewPost(aliceThread))
    expect(aliceThread.viewer).toEqual({ canReply: false })
    const {
      data: { thread: danThread },
    } = await agent.api.app.bsky.feed.getPostThread(
      { uri: post.ref.uriStr },
      { headers: await network.serviceHeaders(sc.dids.dan) },
    )
    assert(isThreadViewPost(danThread))
    expect(danThread.post.gate).toMatchSnapshot()
    expect(danThread.viewer).toEqual({ canReply: true })
    const [reply, ...otherReplies] = danThread.replies ?? []
    assert(isThreadViewPost(reply))
    expect(otherReplies.length).toEqual(0)
    expect(reply.post.uri).toEqual(danReply.ref.uriStr)
  })

  it('applies gate for following rule.', async () => {
    const post = await sc.post(sc.dids.carol, 'following rule')
    await pdsAgent.api.app.bsky.feed.gate.create(
      { repo: sc.dids.carol, rkey: post.ref.uri.rkey },
      {
        post: post.ref.uriStr,
        createdAt: iso(),
        allow: [{ $type: 'app.bsky.feed.gate#followingRule' }],
      },
      sc.getHeaders(sc.dids.carol),
    )
    // carol only follows alice
    await sc.reply(
      sc.dids.dan,
      post.ref,
      post.ref,
      'following rule reply disallow',
    )
    const aliceReply = await sc.reply(
      sc.dids.alice,
      post.ref,
      post.ref,
      'following rule reply allow',
    )
    await network.processAll()
    const {
      data: { thread: danThread },
    } = await agent.api.app.bsky.feed.getPostThread(
      { uri: post.ref.uriStr },
      { headers: await network.serviceHeaders(sc.dids.dan) },
    )
    assert(isThreadViewPost(danThread))
    expect(danThread.viewer).toEqual({ canReply: false })
    const {
      data: { thread: aliceThread },
    } = await agent.api.app.bsky.feed.getPostThread(
      { uri: post.ref.uriStr },
      { headers: await network.serviceHeaders(sc.dids.alice) },
    )
    assert(isThreadViewPost(aliceThread))
    expect(aliceThread.post.gate).toMatchSnapshot()
    expect(aliceThread.viewer).toEqual({ canReply: true })
    const [reply, ...otherReplies] = aliceThread.replies ?? []
    assert(isThreadViewPost(reply))
    expect(otherReplies.length).toEqual(0)
    expect(reply.post.uri).toEqual(aliceReply.ref.uriStr)
  })

  it('applies gate for list rule.', async () => {
    const post = await sc.post(sc.dids.carol, 'following rule')
    // setup lists to allow alice and dan
    const listA = await pdsAgent.api.app.bsky.graph.list.create(
      { repo: sc.dids.carol },
      {
        name: 'list a',
        purpose: 'app.bsky.graph.defs#modlist',
        createdAt: iso(),
      },
      sc.getHeaders(sc.dids.carol),
    )
    await pdsAgent.api.app.bsky.graph.listitem.create(
      { repo: sc.dids.carol },
      {
        list: listA.uri,
        subject: sc.dids.alice,
        createdAt: iso(),
      },
      sc.getHeaders(sc.dids.carol),
    )
    const listB = await pdsAgent.api.app.bsky.graph.list.create(
      { repo: sc.dids.carol },
      {
        name: 'list b',
        purpose: 'app.bsky.graph.defs#modlist',
        createdAt: iso(),
      },
      sc.getHeaders(sc.dids.carol),
    )
    await pdsAgent.api.app.bsky.graph.listitem.create(
      { repo: sc.dids.carol },
      {
        list: listB.uri,
        subject: sc.dids.dan,
        createdAt: iso(),
      },
      sc.getHeaders(sc.dids.carol),
    )
    await pdsAgent.api.app.bsky.feed.gate.create(
      { repo: sc.dids.carol, rkey: post.ref.uri.rkey },
      {
        post: post.ref.uriStr,
        createdAt: iso(),
        allow: [
          { $type: 'app.bsky.feed.gate#listRule', list: listA },
          { $type: 'app.bsky.feed.gate#listRule', list: listB },
        ],
      },
      sc.getHeaders(sc.dids.carol),
    )
    //
    await sc.reply(sc.dids.bob, post.ref, post.ref, 'list rule reply disallow')
    const aliceReply = await sc.reply(
      sc.dids.alice,
      post.ref,
      post.ref,
      'list rule reply allow (list a)',
    )
    const danReply = await sc.reply(
      sc.dids.dan,
      post.ref,
      post.ref,
      'list rule reply allow (list b)',
    )
    await network.processAll()
    const {
      data: { thread: bobThread },
    } = await agent.api.app.bsky.feed.getPostThread(
      { uri: post.ref.uriStr },
      { headers: await network.serviceHeaders(sc.dids.bob) },
    )
    assert(isThreadViewPost(bobThread))
    expect(bobThread.viewer).toEqual({ canReply: false })
    const {
      data: { thread: aliceThread },
    } = await agent.api.app.bsky.feed.getPostThread(
      { uri: post.ref.uriStr },
      { headers: await network.serviceHeaders(sc.dids.alice) },
    )
    assert(isThreadViewPost(aliceThread))
    expect(aliceThread.viewer).toEqual({ canReply: true })
    const {
      data: { thread: danThread },
    } = await agent.api.app.bsky.feed.getPostThread(
      { uri: post.ref.uriStr },
      { headers: await network.serviceHeaders(sc.dids.dan) },
    )
    assert(isThreadViewPost(danThread))
    expect(forSnapshot(danThread.post.gate)).toMatchSnapshot()
    expect(danThread.viewer).toEqual({ canReply: true })
    const [reply1, reply2, ...otherReplies] = aliceThread.replies ?? []
    assert(isThreadViewPost(reply1))
    assert(isThreadViewPost(reply2))
    expect(otherReplies.length).toEqual(0)
    expect(reply1.post.uri).toEqual(danReply.ref.uriStr)
    expect(reply2.post.uri).toEqual(aliceReply.ref.uriStr)
  })

  it('applies gate for unknown list rule.', async () => {
    const post = await sc.post(sc.dids.carol, 'unknown list rules')
    await pdsAgent.api.app.bsky.feed.gate.create(
      { repo: sc.dids.carol, rkey: post.ref.uri.rkey },
      {
        post: post.ref.uriStr,
        createdAt: iso(),
        allow: [
          {
            $type: 'app.bsky.feed.gate#listRule',
            list: {
              // bad list link, references a post
              uri: post.ref.uriStr,
              cid: post.ref.cidStr,
            },
          },
        ],
      },
      sc.getHeaders(sc.dids.carol),
    )
    await sc.reply(
      sc.dids.alice,
      post.ref,
      post.ref,
      'unknown list rules reply',
    )
    await network.processAll()
    const {
      data: { thread },
    } = await agent.api.app.bsky.feed.getPostThread(
      { uri: post.ref.uriStr },
      { headers: await network.serviceHeaders(sc.dids.alice) },
    )
    assert(isThreadViewPost(thread))
    expect(forSnapshot(thread.post.gate)).toMatchSnapshot()
    expect(thread.viewer).toEqual({ canReply: false })
    expect(thread.replies?.length).toEqual(0)
  })

  it('applies gate for multiple rules.', async () => {
    const post = await sc.post(sc.dids.carol, 'multi rules @dan.test', [
      {
        index: { byteStart: 12, byteEnd: 21 },
        features: [
          { $type: 'app.bsky.richtext.facet#mention', did: sc.dids.dan },
        ],
      },
    ])
    await pdsAgent.api.app.bsky.feed.gate.create(
      { repo: sc.dids.carol, rkey: post.ref.uri.rkey },
      {
        post: post.ref.uriStr,
        createdAt: iso(),
        allow: [
          { $type: 'app.bsky.feed.gate#mentionRule' },
          { $type: 'app.bsky.feed.gate#followingRule' },
        ],
      },
      sc.getHeaders(sc.dids.carol),
    )
    // carol only follows alice, and the post mentions dan.
    await sc.reply(sc.dids.bob, post.ref, post.ref, 'multi rule reply disallow')
    const aliceReply = await sc.reply(
      sc.dids.alice,
      post.ref,
      post.ref,
      'multi rule reply allow (following)',
    )
    const danReply = await sc.reply(
      sc.dids.dan,
      post.ref,
      post.ref,
      'multi rule reply allow (mention)',
    )
    await network.processAll()
    const {
      data: { thread: bobThread },
    } = await agent.api.app.bsky.feed.getPostThread(
      { uri: post.ref.uriStr },
      { headers: await network.serviceHeaders(sc.dids.bob) },
    )
    assert(isThreadViewPost(bobThread))
    expect(bobThread.viewer).toEqual({ canReply: false })
    const {
      data: { thread: aliceThread },
    } = await agent.api.app.bsky.feed.getPostThread(
      { uri: post.ref.uriStr },
      { headers: await network.serviceHeaders(sc.dids.alice) },
    )
    assert(isThreadViewPost(aliceThread))
    expect(aliceThread.viewer).toEqual({ canReply: true })
    const {
      data: { thread: danThread },
    } = await agent.api.app.bsky.feed.getPostThread(
      { uri: post.ref.uriStr },
      { headers: await network.serviceHeaders(sc.dids.dan) },
    )
    assert(isThreadViewPost(danThread))
    expect(danThread.post.gate).toMatchSnapshot()
    expect(danThread.viewer).toEqual({ canReply: true })
    const [reply1, reply2, ...otherReplies] = aliceThread.replies ?? []
    assert(isThreadViewPost(reply1))
    assert(isThreadViewPost(reply2))
    expect(otherReplies.length).toEqual(0)
    expect(reply1.post.uri).toEqual(danReply.ref.uriStr)
    expect(reply2.post.uri).toEqual(aliceReply.ref.uriStr)
  })

  it('applies gate for missing rules, takes no action.', async () => {
    const post = await sc.post(sc.dids.carol, 'missing rules')
    await pdsAgent.api.app.bsky.feed.gate.create(
      { repo: sc.dids.carol, rkey: post.ref.uri.rkey },
      { post: post.ref.uriStr, createdAt: iso() },
      sc.getHeaders(sc.dids.carol),
    )
    const aliceReply = await sc.reply(
      sc.dids.alice,
      post.ref,
      post.ref,
      'missing rules reply',
    )
    await network.processAll()
    const {
      data: { thread },
    } = await agent.api.app.bsky.feed.getPostThread(
      { uri: post.ref.uriStr },
      { headers: await network.serviceHeaders(sc.dids.alice) },
    )
    assert(isThreadViewPost(thread))
    expect(thread.post.gate).toMatchSnapshot()
    expect(thread.viewer).toEqual({ canReply: true })
    const [reply, ...otherReplies] = thread.replies ?? []
    assert(isThreadViewPost(reply))
    expect(otherReplies.length).toEqual(0)
    expect(reply.post.uri).toEqual(aliceReply.ref.uriStr)
  })

  it('applies gate after root post is deleted.', async () => {
    // @NOTE also covers rule application more than one level deep
    const post = await sc.post(sc.dids.carol, 'following rule w/ post deletion')
    await pdsAgent.api.app.bsky.feed.gate.create(
      { repo: sc.dids.carol, rkey: post.ref.uri.rkey },
      {
        post: post.ref.uriStr,
        createdAt: iso(),
        allow: [{ $type: 'app.bsky.feed.gate#followingRule' }],
      },
      sc.getHeaders(sc.dids.carol),
    )
    // carol only follows alice
    const orphanedReply = await sc.reply(
      sc.dids.alice,
      post.ref,
      post.ref,
      'following rule reply allow',
    )
    await pdsAgent.api.app.bsky.feed.post.delete(
      { repo: sc.dids.carol, rkey: post.ref.uri.rkey },
      sc.getHeaders(sc.dids.carol),
    )
    await network.processAll()
    await sc.reply(
      sc.dids.dan,
      post.ref,
      orphanedReply.ref,
      'following rule reply disallow',
    )
    const aliceReply = await sc.reply(
      sc.dids.alice,
      post.ref,
      orphanedReply.ref,
      'following rule reply allow',
    )
    await network.processAll()
    const {
      data: { thread: danThread },
    } = await agent.api.app.bsky.feed.getPostThread(
      { uri: orphanedReply.ref.uriStr },
      { headers: await network.serviceHeaders(sc.dids.dan) },
    )
    assert(isThreadViewPost(danThread))
    expect(danThread.viewer).toEqual({ canReply: false })
    const {
      data: { thread: aliceThread },
    } = await agent.api.app.bsky.feed.getPostThread(
      { uri: orphanedReply.ref.uriStr },
      { headers: await network.serviceHeaders(sc.dids.alice) },
    )
    assert(isThreadViewPost(aliceThread))
    assert(
      isNotFoundPost(aliceThread.parent) &&
        aliceThread.parent.uri === post.ref.uriStr,
    )
    expect(aliceThread.post.gate).toMatchSnapshot()
    expect(aliceThread.viewer).toEqual({ canReply: true })
    const [reply, ...otherReplies] = aliceThread.replies ?? []
    assert(isThreadViewPost(reply))
    expect(otherReplies.length).toEqual(0)
    expect(reply.post.uri).toEqual(aliceReply.ref.uriStr)
  })

  it('does not apply gate to original poster.', async () => {
    const post = await sc.post(sc.dids.carol, 'empty rules')
    await pdsAgent.api.app.bsky.feed.gate.create(
      { repo: sc.dids.carol, rkey: post.ref.uri.rkey },
      { post: post.ref.uriStr, createdAt: iso(), allow: [] },
      sc.getHeaders(sc.dids.carol),
    )
    const selfReply = await sc.reply(
      sc.dids.carol,
      post.ref,
      post.ref,
      'empty rules reply allow',
    )
    await network.processAll()
    const {
      data: { thread },
    } = await agent.api.app.bsky.feed.getPostThread(
      { uri: post.ref.uriStr },
      { headers: await network.serviceHeaders(sc.dids.carol) },
    )
    assert(isThreadViewPost(thread))
    expect(thread.post.gate).toMatchSnapshot()
    expect(thread.viewer).toEqual({ canReply: true })
    const [reply, ...otherReplies] = thread.replies ?? []
    assert(isThreadViewPost(reply))
    expect(otherReplies.length).toEqual(0)
    expect(reply.post.uri).toEqual(selfReply.ref.uriStr)
  })

  it('displays gated posts in feed and thread anchor without reply context.', async () => {
    const post = await sc.post(sc.dids.carol, 'following rule')
    await pdsAgent.api.app.bsky.feed.gate.create(
      { repo: sc.dids.carol, rkey: post.ref.uri.rkey },
      {
        post: post.ref.uriStr,
        createdAt: iso(),
        allow: [{ $type: 'app.bsky.feed.gate#followingRule' }],
      },
      sc.getHeaders(sc.dids.carol),
    )
    // carol only follows alice
    const badReply = await sc.reply(
      sc.dids.dan,
      post.ref,
      post.ref,
      'following rule reply disallow',
    )
    // going to ensure this one doesn't appear in badReply's thread
    await sc.reply(sc.dids.alice, post.ref, badReply.ref, 'reply to disallowed')
    await network.processAll()
    // check thread view
    const {
      data: { thread },
    } = await agent.api.app.bsky.feed.getPostThread(
      { uri: badReply.ref.uriStr },
      { headers: await network.serviceHeaders(sc.dids.alice) },
    )
    assert(isThreadViewPost(thread))
    expect(thread.viewer).toEqual({ canReply: false }) // nobody can reply to this, not even alice.
    expect(thread.replies).toBeUndefined()
    expect(thread.parent).toBeUndefined()
    expect(thread.post.gate).toBeUndefined()
    // check feed view
    const {
      data: { feed },
    } = await agent.api.app.bsky.feed.getAuthorFeed(
      { actor: sc.dids.dan },
      { headers: await network.serviceHeaders(sc.dids.alice) },
    )
    const [feedItem] = feed
    expect(feedItem.post.uri).toEqual(badReply.ref.uriStr)
    expect(feedItem.post.gate).toBeUndefined()
    expect(feedItem.reply).toBeUndefined()
  })

  it('does not apply gate unless it matches post rkey.', async () => {
    const postA = await sc.post(sc.dids.carol, 'ungated a')
    const postB = await sc.post(sc.dids.carol, 'ungated b')
    await pdsAgent.api.app.bsky.feed.gate.create(
      { repo: sc.dids.carol, rkey: postA.ref.uri.rkey },
      { post: postB.ref.uriStr, createdAt: iso(), allow: [] },
      sc.getHeaders(sc.dids.carol),
    )
    await sc.reply(sc.dids.alice, postA.ref, postA.ref, 'ungated reply')
    await sc.reply(sc.dids.alice, postB.ref, postB.ref, 'ungated reply')
    await network.processAll()
    const {
      data: { thread: threadA },
    } = await agent.api.app.bsky.feed.getPostThread(
      { uri: postA.ref.uriStr },
      { headers: await network.serviceHeaders(sc.dids.alice) },
    )
    assert(isThreadViewPost(threadA))
    expect(threadA.post.gate).toBeUndefined()
    expect(threadA.viewer).toEqual({ canReply: true })
    expect(threadA.replies?.length).toEqual(1)
    const {
      data: { thread: threadB },
    } = await agent.api.app.bsky.feed.getPostThread(
      { uri: postB.ref.uriStr },
      { headers: await network.serviceHeaders(sc.dids.alice) },
    )
    assert(isThreadViewPost(threadB))
    expect(threadB.post.gate).toBeUndefined()
    expect(threadB.viewer).toEqual({ canReply: true })
    expect(threadB.replies?.length).toEqual(1)
  })
})

const iso = (date = new Date()) => date.toISOString()
